# interstitial-journal

./: .gitignore  README.md  SPEC.md  pivot.md  requests-features.md
.github/workflows/: release.yml
api/: _auth.php  _bootstrap.php  _config.php  _db.php  _images.php  _tags.php  config.local.example.php  device_tokens.php  download.php  entries.php  entries_delete.php  entries_show.php  entries_update.php  health.php  heatmap.php  images.php  images_show.php  index.php  migrate_sqlite_to_mysql.php  session.php  signup.php  stats.php  tags.php
api/data/: ij_mysql_import.sql
research/: 00-product-definition.md  01-market-landscape.md  02-competitor-map.md  03-target-users-positioning.md  04-pivot-options.md  05-product-roadmap-feature-strategy.md  06-gtm-pricing-risk.md  07-source-log.md  08-adversarial-debate.md  09-revised-strategy-after-debate.md  README.md
research/agent-debate-02/: central-voting-system.md
research/ceo-office/: final-production-definition-and-execution-plan.md  stitch-feature-brief.md  (+1 more)
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/permissions/autogenerated/: capture_screenshot.toml  clear_device_auth.toml  get_desktop_prefs.toml  get_device_auth.toml  hide_quick_punch.toml
tauri-app/src-tauri/src/: capture.rs  device_auth.rs  lib.rs  live_feed.rs
tauri-app/src-tauri/src/macos/: live_feed_panel.rs  mod.rs  quick_punch_panel.rs
web-app/: index.html  package-lock.json  package.json  vite.config.ts
(+70 files in other folders)
