[package]
name = "tauri-app"
version = "0.1.0"
description = "Interstitial Journal — desktop execution layer"
authors = ["Interstitial Journal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
time = { version = "0.3", features = ["formatting"] }
url = "2"
tauri-plugin-screenshots = "2.2"
tauri-plugin-deep-link = "2"
# Hotkey capture path — **must** stay on 0.9+: 0.3 calls AppKit (`NSScreen`) during
# `Monitor::all()`, which we invoke from `spawn_blocking` → crash off main thread.
# The screenshots plugin still pulls xcap 0.3 internally; we link 0.9 for `capture.rs` only.
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
